# mimic-iv-nonicu-medication

./: .gitignore  README.md  REPRODUCIBILITY.md  _quarto.yml  pyproject.toml  requirements.txt
docs/: 01_cohort_SHORT.md  02_exposure_SHORT.md  03a_validate_input_tables_SHORT.md  03b_describe_analysis_dataset_SHORT.md  04a_unadjusted_outcomes_SHORT.md  04b_multivariable_outcomes_SHORT.md  05_sas_python_validation_SHORT.md  DISCUSSION_AND_LIMITATIONS.md  FIGURE_REPRODUCIBILITY.md  METHODS_OVERVIEW.md  RESULTS_SUMMARY.md  SETUP.md  STUDY_BACKGROUND.md  VALIDATION_NOTES.md
docs/reports/: nonicu_raas_mortality_report.html
notebooks/: 01_cohort.ipynb  02_exposure.ipynb  03a_validate_input_tables.ipynb  03b_describe_analysis_dataset.ipynb  04a_unadjusted_outcomes.ipynb  04b_multivariable_outcomes.ipynb  05_sas_python_validation.ipynb
python/outputs/: .gitkeep  python_logistic_parameters.csv  python_unadjusted_outcomes.csv
reports/: nonicu_raas_mortality_report.qmd
sas/: README.md
sas/outputs/: sas_logistic_parameters.csv  sas_unadjusted_outcomes.csv
sas/programs/: 01_import_cohort.sas  02_baseline_table.sas  03_unadjusted_analysis.sas  04_multivariable_logistic.sas
scripts/: quarto_normalize_outputs.py  validation_checklist.py
sql/: 01_build_base_hosp_admissions.sql  01_collapse_race_categories.sql  02_exclude_icu_admissions.sql  03_build_analysis_dataset.sql  03_define_exposure_raas_early.sql  04_check_raas_drugs.sql
