[project]
name = "mimic-iv-nonicu-medication"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "db-dtypes>=1.0",
    "google-auth>=2.0",
    "google-cloud-bigquery[pandas]>=3.0",
    "ipykernel>=6.0",
    "jupyterlab>=4.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]
